--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </div>
                         <!-- /.stay-time -->
                         <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                            <p>In my free time, I work on some pet projects: <a href="https://github.com/conanak99/">https://github.com/conanak99/</a></p>
+                            <p>In my free time, I work on some useless projects: <a href="https://github.com/trungducng/">https://github.com/trungducng/</a></p>
                             <ul>
                                 <li><a href="http://nothere.com/" class="bold">Blog</a>: An app to write and read blog <b>(ReactJS + Redux. Back-end: NodeJS + SailsJS + AWS)</b>
                                     - <a href="https://github.com/trungducng" target="_blank">Github</a>
